<resources>
    <string name="app_name">Progetto</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_title">Impostazioni</string>
    <string name="automatic_measurements">Misurazioni automatiche</string>
    <string name="interval_measurements">Intervallo misurazioni (minuti)</string>
    <string name="save">Salva</string>
    <string name="volume_map">Mappa Volume</string>
    <string name="wifilte_map">Mappa WiFi e LTE</string>
    <string name="volume_map_description">Questa è la mappa per la misurazione del volume</string>
    <string name="wifilte_map_description">Questa è a mappa per la misurazione del segnale WiFi e LTE</string>
    <string name="button_new_measure">Bottone per eseguire una nuova misurazione</string>
    <string name="last_measurement">Ultima Misurazione</string>
    <string name="measurement_n_1">Misurazione N-1</string>
    <string name="interval_automatic_measurements_value">Valoreper intervallo automatico di misurazione</string>

    <string name="id_measurement">ID:</string>
    <string name="position_measurement">Posizione:</string>
    <string name="date_measurement">Data:</string>
    <string name="value_measurement">Valore:</string>



</resources>