<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_measurement"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position_measurement"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_measurement"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_measurement"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
</layout>