<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/settings_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchAutomaticMeasurements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:text="@string/automatic_measurements"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/editTextIntervalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:minWidth="50dp"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/textViewInterval"
        app:layout_constraintTop_toBottomOf="@+id/switchAutomaticMeasurements"
        app:layout_constraintVertical_bias="0.313"/>

    <TextView
        android:id="@+id/textViewInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interval_measurements"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchAutomaticMeasurements"
        app:layout_constraintVertical_bias="0.324"
        android:contentDescription="@string/interval_automatic_measurements_value"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextIntervalValue"
        app:layout_constraintStart_toStartOf="@+id/editTextIntervalValue"
        app:layout_constraintTop_toBottomOf="@+id/editTextIntervalValue"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:clickable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>
