<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VolumeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_map"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mapViewVolume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapViewVolume"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        android:contentDescription="@string/volume_map_description"/>

    <TextView
        android:id="@+id/textViewLastMeasurementTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_measurement"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/mapViewVolume"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/textViewLastMeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dato ultima misurazione"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastMeasurementTitle"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/textViewPreviousMeasurementTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurement_n_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastMeasurement"
        app:layout_constraintVertical_bias="0.316" />

    <TextView
        android:id="@+id/textViewPreviousMeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dato misurazione n-1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPreviousMeasurementTitle"
        app:layout_constraintVertical_bias="0.149" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="307dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        android:src="@drawable/baseline_add_circle_outline_24"
        android:tint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapViewVolume"
        app:layout_constraintVertical_bias="0.89"
        app:maxImageSize="48dp"
        android:contentDescription="@string/button_new_measure"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>